<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<!-- springboot依赖的父工程，使用的 springboot2.0.3.RELEASE版本 -->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.6.RELEASE</version>
	</parent>
	<groupId>com.itrus</groupId>
	<artifactId>common-product</artifactId>
	<version>2.2.0</version>
	<name>common-product</name>
	<description>common-product</description>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<source>${java.version}</source> <!--指明源码用的Jdk版本 -->
					<target>${java.version}</target> <!--指明打包后的Jdk版本 -->
					<encoding>${project.build.sourceEncoding}</encoding>
					<excludes>
						<exclude>application.yml</exclude>
						<exclude>log4j2-spring.xml</exclude>
						<exclude>com/itrus/common/WebApplication.class</exclude>
						<exclude>com/itrus/common/swagger/SwaggerConfig.class</exclude>
					</excludes>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
				<configuration> 开关单元测试 <skipTests>false</skipTests> <forkMode>never</forkMode> 
				<argLine>-Dfile.encoding=UTF-8</argLine> <properties> <property> <name>usedefaultlisteners</name> 
				<value>false</value> </property> <property> <name>listener</name> <value> 
				注意替换,该类可以参考BeautyReporter编写 com.itrus.common.reporter.BeautyReporter </value> 
				</property> </properties> </configuration> </plugin> -->
		</plugins>
	</build>
	<properties>
		<java.version>1.8</java.version>
		<httpclient.version>4.5.6</httpclient.version>
		<okhttp.version>3.10.0</okhttp.version>
		<apphome.version>5.0.5</apphome.version>
		<apiservice.version>4.0.9</apiservice.version>
		<jave.version>1.6.5</jave.version>
		<poi.version>3.17</poi.version>
		<atom-sign-api.version>1.1.4</atom-sign-api.version>
		<springfox-swagger.version>2.9.2</springfox-swagger.version>
		<commons-collections.version>3.2.1</commons-collections.version>
		<commons-beanutils.version>1.8.3</commons-beanutils.version>
	</properties>
	<!-- 私有化服务上传jar -->
	<distributionManagement>
		<repository>
			<id>maven-itrus-releases</id>
			<name>maven-itrus-releases</name>
			<url>http://mv.6rencn.com:9191/repository/maven-itrus-releases/</url>
		</repository>
		<snapshotRepository>
			<id>maven-itrus-snapshots</id>
			<name>maven-itrus-snapshots</name>
			<url>http://mv.6rencn.com:9191/repository/maven-itrus-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>${okhttp.version}</version>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
			<scope>compile</scope>
		</dependency>
		<!-- testNG start -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-test</artifactId>
			<scope>test</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.vimalselvam</groupId>
			<artifactId>testng-extentsreport</artifactId>
			<version>1.3.1</version>
			<scope>test</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>3.0.6</version>
			<scope>test</scope>
			<optional>true</optional>
		</dependency>
		<!-- testNG end -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${poi.version}</version>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${poi.version}</version>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>${commons-collections.version}</version>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>${commons-beanutils.version}</version>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>

		<!-- 添加APPHOME -->
		<dependency>
			<groupId>com.itrus.newportal</groupId>
			<artifactId>apphome</artifactId>
			<scope>compile</scope>
			<version>${apphome.version}</version>
			<optional>true</optional>
			<exclusions>
				<exclusion>
					<groupId>org.mybatis</groupId>
					<artifactId>mybatis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.itrus.newportal</groupId>
			<artifactId>apiservice</artifactId>
			<scope>compile</scope>
			<optional>true</optional>
			<version>${apiservice.version}</version>
		</dependency>

		<dependency>
			<groupId>cn.com.itrus.atom.sign</groupId>
			<artifactId>atom-sign-api</artifactId>
			<scope>compile</scope>
			<version>${atom-sign-api.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.itrus</groupId>
			<artifactId>jave</artifactId>
			<scope>compile</scope>
			<version>${jave.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
			<scope>compile</scope>
		</dependency>

		<!-- 发送邮件 -->
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<scope>compile</scope>
		</dependency>
	</dependencies>
</project>
